Image alignment fix.

--- a/index.css
+++ b/index.css
@@ -136,9 +136,6 @@ div.flex1:hover {
 	transition: all 0.3s ease;
 	padding: 20px;
 }
-div.image1 {
-	padding: 20px;
-}
 img.myself {
 	margin-left: 150px;
 	height: 500px;
@@ -167,24 +164,26 @@ div.textbox2 {
 	font-size: 25px;
 	font-family: 'Hanuman';
 }
-@media (max-width: 1000px) {
-	img.myself {
-	height: 500px;
-		width: 300px;
-		flex-direction: column;
-		margin-left: auto;
-		margin-right: auto;
-		align-items: center;
-	}
-    div.flex1 {   
-    flex-direction: column;
-	}
-	div.textbox1 {
-		padding-right: 0;
-		text-align: center;
-		padding-top: 0px;
-		width: auto;
-		height: auto;
-		margin: auto;
-	}
+@media (max-width: 1200px) {
+    img.myself {
+        height: 500px;
+        width: 300px;
+        margin-left: auto;
+        margin-right: auto;
+        display: block;
+    }
+
+    div.flex1 {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    div.textbox1 {
+        padding-right: 0;
+        text-align: center;
+        padding-top: 0px;
+        width: auto;
+        height: auto;
+        margin: auto;
+    }
 }
